Add prism to index.html

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>Damian C. Rossney :: Developer</title>
-        <link rel="stylesheet" href="css/main.css">
-    </head>
-    <body>
-
-    </body>
+  <head>
+    <meta charset="utf-8">
+    <title>Damian C. Rossney :: Developer</title>
+    <link rel="stylesheet" href="css/prism.css">
+    <link rel="stylesheet" href="css/main.css">
+  </head>
+  <body>
+    <script src='js/prism.js'></script>
+  </body>
 </html>
