--- a/index.html
+++ b/index.html
@@ -7,6 +7,68 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
+    <header><h1>Damian C. Rossney</h1><h4>WEB DEVELOPER</h4></header>
+    <pre class='line-numbers'><code class='language-javascript'>================================================================================
+
+// AS A           curious seeker, inveterate learner, and voracious autodidact,
+// I WOULD LIKE   a position that allows me to exercise my skills and creativity
+// IN ORDER TO    create useful, meaningful products.
+
+var Damian_Rossney = (function() {
+
+  var story = 'Although trained in business and math in college, my early     '+
+              'path lead me to the legal field, where I worked as a paralegal.'+
+              'I found the legal process interesting, and medical malpractice '+
+              'in particluar to be fascinating, but ultimately felt it to be  '+
+              'unrewarding.  In search of greater fulfillment, I was drawn to '+
+              'a field that has always brought me joy and creative release in '+
+              'my personal life: programming.  I am fascinated by the reach   '+
+              'and scalability of the web and thrilled by the ability of      '+
+              'software to solve complex problems and build practical         '+
+              'products.';
+
+  var skills = {
+
+    languages:              [ Ruby, JavaScript                    ],
+
+    frameworks:             [ Rails, Sinatra, jQuery, Handlebars  ],
+
+    databases:              [ PostrgreSQL, MySQL, SQLite          ],
+
+    front_end:              [ HTML5, CSS3, Bootstrap, Skeleton    ],
+
+    testing:                [ Rspec, Jasmine, Capybara, SimpleCov ],
+
+    version_control:        [ Git, GitHub, BitBucket              ],
+
+    continuous_deployment:  [ Heroku                              ],
+
+    continuous_integration: [ CircleCI                            ],
+
+    methodologies:          [ Agile, Kanban, TDD, OOD/OOP, MVC,
+                              RESTful Pattern, AJAX               ]
+
+  };
+
+  var projects = {
+
+    theres-a-board: "An open source mentorship app initially designed around  "+
+                    "the simple idea of matching students with student-tutors "+
+                    "based on availability and study topic, There's A Board   "+
+                    "evolved into a powerful support platform allowing        "+
+                    "students, alumns, and employee mentors to connect for    "+
+                    "studying, tutoring, and skill development.  There's A    "+
+                    "Board was adopted by Dev Bootcamp and is currently in    "+
+                    "use as their tool for managing both paid and volunteer   "+
+                    "mentors.  Built on a Rails backend, with a custom        "+
+                    "JavaScript front end, using agile methods.  The back end "+
+                    "has full test coverage and employed both continuous      "+
+                    "integration and continuous deployment.";
+
+  };
+
+}) ();
+    </code></pre>
     <script src='js/prism.js'></script>
   </body>
 </html>
