--- a/index.html
+++ b/index.html
@@ -61,9 +61,10 @@ var Damian_Rossney = (function() {
                     "Board was adopted by Dev Bootcamp and is currently in    "+
                     "use as their tool for managing both paid and volunteer   "+
                     "mentors.  Built on a Rails backend, with a custom        "+
-                    "JavaScript front end, using agile methods.  The back end "+
-                    "has full test coverage and employed both continuous      "+
-                    "integration and continuous deployment.";
+                    "JavaScript front end, with full test coverage of the     "+
+                    "back end.  We employed agile methods based on kanban,    "+
+                    "and utilized both continuous integration and continuous  "+
+                    "deployment.  (https://github/theresaboard)";
 
   };
 
