--- a/index.html
+++ b/index.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Damian C. Rossney :: Developer</title>
-    <link rel="stylesheet" href="css/prism.css">
-  </head>
-  <body>
-    <header><h1>Damian C. Rossney</h1><h4>WEB DEVELOPER</h4></header>
-    <pre class='line-numbers'><code class='language-javascript'>================================================================================
+<head>
+	<meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
+	<title>Damian C. Rossney :: Developer</title>
+	<link href="css/prism.css" rel="stylesheet" />
+</head>
+<body>
+<header><h1>Damian C. Rossney</h1><h3>WEB DEVELOPER</h3></header>
+<pre class="line-numbers">
+<code class="language-javascript">================================================================================
 
-// AS A           curious seeker, inveterate learner, and voracious autodidact,
-// I WOULD LIKE   a position that allows me to exercise my skills and creativity
-// IN ORDER TO    create useful, meaningful products.
+//         AS A  curious seeker, inveterate learner, and voracious autodidact,
+// I WOULD LIKE  a position that allows me to exercise my skills and creativity
+//  IN ORDER TO  create useful, meaningful things.
 
 var Damian_Rossney = (function() {
 
-  var story = 'Although trained in business and math in college, my early     '+
-              'path lead me to the legal field, where I worked as a paralegal.'+
-              'I found the legal process interesting, and medical malpractice '+
-              'in particluar to be fascinating, but ultimately felt it to be  '+
-              'unrewarding.  In search of greater fulfillment, I was drawn to '+
-              'a field that has always brought me joy and creative release in '+
-              'my personal life: programming.  I am fascinated by the reach   '+
-              'and scalability of the web and thrilled by the ability of      '+
-              'software to solve complex problems and build practical         '+
-              'products.';
+  var story = &#39;Although trained in business and math in college, my early     &#39;+
+              &#39;path lead me to the legal field, where I worked as a paralegal.&#39;+
+              &#39;I found the legal process interesting, and medical malpractice &#39;+
+              &#39;in particular to be fascinating, but ultimately felt it to be  &#39;+
+              &#39;unrewarding.  In search of greater fulfillment, I was drawn to &#39;+
+              &#39;a field that has always brought me joy and creative release in &#39;+
+              &#39;my personal life: programming.  I am fascinated by the reach   &#39;+
+              &#39;and scalability of the web and thrilled by the ability of      &#39;+
+              &#39;software to solve complex problems and build practical things. &#39;;
 
   var skills = {
 
@@ -51,24 +51,23 @@ var Damian_Rossney = (function() {
 
   var projects = {
 
-    theres-a-board: "An open source mentorship app initially designed around  "+
-                    "the simple idea of matching students with student-tutors "+
-                    "based on availability and study topic, There's A Board   "+
-                    "evolved into a powerful support platform allowing        "+
-                    "students, alumns, and employee mentors to connect for    "+
-                    "studying, tutoring, and skill development.  There's A    "+
-                    "Board was adopted by Dev Bootcamp and is currently in    "+
-                    "use as their tool for managing both paid and volunteer   "+
-                    "mentors.  Built on a Rails backend, with a custom        "+
-                    "JavaScript front end, with full test coverage of the     "+
-                    "back end.  We employed agile methods based on kanban,    "+
-                    "and utilized both continuous integration and continuous  "+
-                    "deployment.  (https://github/theresaboard)";
+    theres-a-board: &quot;An open source mentorship app initially designed around  &quot;+
+                    &quot;the simple idea of matching students with student-tutors &quot;+
+                    &quot;based on availability and study topic, There&#39;s A Board   &quot;+
+                    &quot;evolved into a powerful support platform allowing        &quot;+
+                    &quot;students, alumns, and employee mentors to connect for    &quot;+
+                    &quot;studying, tutoring, and skill development.  There&#39;s A    &quot;+
+                    &quot;Board was adopted by Dev Bootcamp and is currently in    &quot;+
+                    &quot;use as their tool for managing both paid and volunteer   &quot;+
+                    &quot;mentors.  Built on a Rails backend, with a custom        &quot;+
+                    &quot;JavaScript front end, with full test coverage of the     &quot;+
+                    &quot;back end.  We employed agile methods based on kanban,    &quot;+
+                    &quot;and utilized both continuous integration and continuous  &quot;+
+                    &quot;deployment.  (https://github.com/theresaboard)&quot;;
 
   };
 
 }) ();
     </code></pre>
-    <script src='js/prism.js'></script>
-  </body>
+<script src='js/prism.js'></script></body>
 </html>
