--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ var Damian_Rossney = (function() {
                     &quot;JavaScript front end, with full test coverage of the     &quot;+
                     &quot;back end.  We employed agile methods based on kanban,    &quot;+
                     &quot;and utilized both continuous integration and continuous  &quot;+
-                    &quot;deployment.  (https://github.com/theresaboard)&quot;;
+                    &quot;deployment.  (https://github.com/theresaboard)&quot;
 
   };
 
