Add contact links

--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
 	<meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
 	<title>Damian C. Rossney :: Developer</title>
-	<link href="css/prism.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/prism.css" />
 </head>
 <body>
-<header><h1>Damian C. Rossney</h1><h3>WEB DEVELOPER</h3></header>
+<header><h1>Damian C. Rossney</h1><h3>WEB DEVELOPER</h3><a href='&#109;&#097;&#105;&#108;&#116;&#111;:&#100;&#097;&#109;&#105;&#097;&#110;&#064;&#114;&#111;&#115;&#115;&#110;&#101;&#121;&#046;&#110;&#101;&#116;?&#083;&#117;&#098;&#106;&#101;&#099;&#116;=&#079;&#110;&#108;&#105;&#110;&#101;%&#050;&#048;&#082;&#101;&#115;&#117;&#109;&#101;%&#050;&#048;&#067;&#111;&#110;&#116;&#097;&#099;&#116;' title='Contact Me'><span class='fa fa-lg fa-envelope'></span></a><a href='https://github.com/dcr8898' title='GitHub'><span class='fa fa-lg fa-github'></span></a><a href='https://linkedin.com/in/damianrossney' title='LinkedIn'><span class='fa fa-lg fa-linkedin-square'></span></a><a href='dl/res20151121.pdf' download='Damian C. Rossney Resume' title='Download Resume'><span class='fa fa-lg fa-file-pdf-o'></span></a>
+</header>
 <pre class="line-numbers">
 <code class="language-javascript">================================================================================
 
@@ -28,24 +30,23 @@ var Damian_Rossney = (function() {
 
   var skills = {
 
-    languages:              [ Ruby, JavaScript                    ],
+    languages:              [ Ruby, JavaScript                                ],
 
-    frameworks:             [ Rails, Sinatra, jQuery, Handlebars  ],
+    frameworks:             [ Rails, Sinatra, jQuery, Handlebars              ],
 
-    databases:              [ PostrgreSQL, MySQL, SQLite          ],
+    databases:              [ PostrgreSQL, MySQL, SQLite                      ],
 
-    front_end:              [ HTML5, CSS3, Bootstrap, Skeleton    ],
+    front_end:              [ HTML5, CSS3, Bootstrap, Skeleton                ],
 
-    testing:                [ Rspec, Jasmine, Capybara, SimpleCov ],
+    testing:                [ Rspec, Jasmine, Capybara, SimpleCov             ],
 
-    version_control:        [ Git, GitHub, BitBucket              ],
+    version_control:        [ Git, GitHub, BitBucket                          ],
 
-    continuous_deployment:  [ Heroku                              ],
+    continuous_deployment:  [ Heroku                                          ],
 
-    continuous_integration: [ CircleCI                            ],
+    continuous_integration: [ CircleCI                                        ],
 
-    methodologies:          [ Agile, Kanban, TDD, OOD/OOP, MVC,
-                              RESTful Pattern, AJAX               ]
+    methodologies:          [ Agile, Kanban, TDD, OOD/OOP, MVC, REST, AJAX    ]
 
   };
 
