--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 //         AS A  curious seeker, inveterate learner, and voracious autodidact,
 // I WOULD LIKE  a position that allows me to exercise my skills and creativity
-//  IN ORDER TO  create useful, meaningful things.
+//  IN ORDER TO  to solve real-world problems with beautiful code.
 
 var Damian_Rossney = (function() {
 
