Fix typo (thanks Mae)

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ var Damian_Rossney = (function() {
 
     frameworks:             [ Rails, Sinatra, jQuery, Handlebars              ],
 
-    databases:              [ PostrgreSQL, MySQL, SQLite                      ],
+    databases:              [ PostgreSQL, MySQL, SQLite                       ],
 
     front_end:              [ HTML5, CSS3, Bootstrap, Skeleton                ],
 
