--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 <header><h1>Damian C. Rossney</h1><h3>WEB DEVELOPER</h3><a href='&#109;&#097;&#105;&#108;&#116;&#111;:&#100;&#097;&#109;&#105;&#097;&#110;&#064;&#114;&#111;&#115;&#115;&#110;&#101;&#121;&#046;&#110;&#101;&#116;?&#083;&#117;&#098;&#106;&#101;&#099;&#116;=&#079;&#110;&#108;&#105;&#110;&#101;%&#050;&#048;&#082;&#101;&#115;&#117;&#109;&#101;%&#050;&#048;&#067;&#111;&#110;&#116;&#097;&#099;&#116;' title='Contact Me'><span class='fa fa-lg fa-envelope'></span></a><a href='https://github.com/dcr8898' title='GitHub'><span class='fa fa-lg fa-github'></span></a><a href='https://linkedin.com/in/damianrossney' title='LinkedIn'><span class='fa fa-lg fa-linkedin-square'></span></a><a href='dl/res20151216.pdf' download='Damian C. Rossney Resume.pdf' title='Download Resume'><span class='fa fa-lg fa-file-pdf-o'></span></a>
 </header>
 <pre class="line-numbers">
-<code class="language-javascript">================================================================================
-
+<code class="language-javascript">
 //         AS A  curious seeker, inveterate learner, and voracious autodidact,
 // I WOULD LIKE  a position that allows me to exercise my skills and creativity
 //  IN ORDER TO  to solve real-world problems with beautiful code.
