Update project list

--- a/about.html
+++ b/about.html
@@ -16,15 +16,15 @@
 
 var Damian_Rossney = (function() {
 
-  var story = &#39;Although trained in business and math in college, my early     &#39;+
-              &#39;path lead me to the legal field, where I worked as a paralegal.&#39;+
-              &#39;I found the legal process interesting, and medical malpractice &#39;+
-              &#39;in particular to be fascinating, but ultimately felt it to be  &#39;+
-              &#39;unrewarding.  In search of greater fulfillment, I was drawn to &#39;+
-              &#39;a field that has always brought me joy and creative release in &#39;+
-              &#39;my personal life: programming.  I am fascinated by the reach   &#39;+
-              &#39;and scalability of the web and thrilled by the ability of      &#39;+
-              &#39;software to solve complex problems and build practical things. &#39;;
+  var story = "Although trained in business and math in college, my early     "+
+              "path lead me to the legal field, where I worked as a paralegal."+
+              "I found the legal process interesting, and medical malpractice "+
+              "in particular to be fascinating, but ultimately felt it to be  "+
+              "unrewarding.  In search of greater fulfillment, I was drawn to "+
+              "a field that has always brought me joy and creative release in "+
+              "my personal life:  programming.  I am fascinated by the reach  "+
+              "and scalability of the web and thrilled by the ability of      "+
+              "software to solve complex problems and build practical things. ";
 
   var skills = {
 
@@ -50,19 +50,61 @@ var Damian_Rossney = (function() {
 
   var projects = {
 
-    theres-a-board: &quot;An open source mentorship app initially designed around  &quot;+
-                    &quot;the simple idea of matching students with student-tutors &quot;+
-                    &quot;based on availability and study topic, There&#39;s A Board   &quot;+
-                    &quot;evolved into a powerful support platform allowing        &quot;+
-                    &quot;students, alumns, and employee mentors to connect for    &quot;+
-                    &quot;studying, tutoring, and skill development.  There&#39;s A    &quot;+
-                    &quot;Board was adopted by Dev Bootcamp and is currently in    &quot;+
-                    &quot;use as their tool for managing both paid and volunteer   &quot;+
-                    &quot;mentors.  Built on a Rails backend, with a custom        &quot;+
-                    &quot;JavaScript front end, with full test coverage of the     &quot;+
-                    &quot;back end.  We employed agile methods based on kanban,    &quot;+
-                    &quot;and utilized both continuous integration and continuous  &quot;+
-                    &quot;deployment.  (https://github.com/theresaboard)&quot;
+    theres-a-board: "An open source mentorship app initially designed around  "+
+                    "the simple idea of matching students with student-tutors "+
+                    "based on availability and study topic, There's A Board   "+
+                    "evolved into a powerful support platform allowing        "+
+                    "students, alumns, and employee-mentors to connect for    "+
+                    "studying, tutoring, and skill development.  There's A    "+
+                    "Board was adopted by Dev Bootcamp and is currently in    "+
+                    "use as their tool for managing both paid and volunteer   "+
+                    "mentors.  Built on a Rails backend, with a custom        "+
+                    "JavaScript front end, with full test coverage of the     "+
+                    "back end.  We employed agile methods based on kanban,    "+
+                    "and utilized both continuous integration and continuous  "+
+                    "deployment.  (https://github.com/theresaboard, live at   "+
+                    "http://theresaboard.com)",
+
+    dcr2048:        "A clone of the fabulous 2048 game created by Gabriele    "+
+                    "Cirulli.  dcr2048 is an exercise in writing JavaScript   "+
+                    "using the MVC pattern.  I intend to further improve the  "+
+                    "game with some cool CSS transforms.  Stay tuned . . .    "+
+                    "(https://github.com/dcr8898/dcr2048, or play it at       "+
+                    "http://rossney.net/2048)",
+
+    dragon:         "An exercise in programmatic generation of an html5       "+
+                    "animation using the canvas element.  This exercise       "+
+                    "explores the dragon curve fractal in pure JavaScript.    "+
+                    "(https://github.com/dcr8898/dragon, or see it at         "+
+                    "http://rossney.net)",
+
+    turtle-overflow: "A clone of the popular Stack Overflow site. Turtle-     "+
+                     "was built as an exercise to explore Ruby on Rails,      "+
+                     "ActiveRecord, and Agile development practices.          "+
+                     "(https://github.com/dcr8898/turtle-overflow)",
+
+    survey-gorilla: "An end-to-end survey creation and poll-taking app,       "+
+                    "complete with statistical analysis and visual charts of  "+
+                    "survey results.  Survey Gorilla was built primarily with "+
+                    "Sinatra, jQuery, ActiveRecord, and Highcharts using      "+
+                    "agile development practices.                             "+
+                    "(https://github.com/dcr8898/survey-gorilla)",
+
+    flash-forward:  "A web-based flash card application that allows users to  "+
+                    "either choose an existing deck, or create their own      "+
+                    "interactively.  Flash-forward also allows users to       "+
+                    "return to incomplete games and provides statistical      "+
+                    "results for all games played.  Flash-forward was built   "+
+                    "with Sinatra, ActiveRecord, and PostgreSQL, using agile  "+
+                    "development practices.                                   "+
+                    "(https://github.com/dcr8898/Flash-Forward)",
+
+    clíque:         "My implementation of the venerable Rails Tutorial by     "+
+                    "Michael Hartl. Clíque is a real, industrial-strength     "+
+                    "application built on Ruby on Rails, exploring all the    "+
+                    "framework's features with full unit tests.               "+
+                    "(https://github.com/dcr8898/clique, see it live at       "+
+                    "http://myclique.herokuapp.com)",
 
   };
 
