Correct project list typos

--- a/about.html
+++ b/about.html
@@ -79,8 +79,8 @@ var Damian_Rossney = (function() {
                     "http://rossney.net)",
 
     turtle-overflow: "A clone of the popular Stack Overflow site. Turtle-     "+
-                     "was built as an exercise to explore Ruby on Rails,      "+
-                     "ActiveRecord, and Agile development practices.          "+
+                     "overflow was built as an exercise to explore Ruby on    "+
+                     "Rails, ActiveRecord, and Agile development practices.   "+
                      "(https://github.com/dcr8898/turtle-overflow)",
 
     survey-gorilla: "An end-to-end survey creation and poll-taking app,       "+
@@ -91,7 +91,7 @@ var Damian_Rossney = (function() {
                     "(https://github.com/dcr8898/survey-gorilla)",
 
     flash-forward:  "A web-based flash card application that allows users to  "+
-                    "either choose an existing deck, or create their own      "+
+                    "either choose an existing deck or create their own       "+
                     "interactively.  Flash-forward also allows users to       "+
                     "return to incomplete games and provides statistical      "+
                     "results for all games played.  Flash-forward was built   "+
@@ -101,8 +101,8 @@ var Damian_Rossney = (function() {
 
     clíque:         "My implementation of the venerable Rails Tutorial by     "+
                     "Michael Hartl. Clíque is a real, industrial-strength     "+
-                    "application built on Ruby on Rails, exploring all the    "+
-                    "framework's features with full unit tests.               "+
+                    "application built on Ruby on Rails, exploring all of the "+
+                    "framework's features with full unit testing.             "+
                     "(https://github.com/dcr8898/clique, see it live at       "+
                     "http://myclique.herokuapp.com)",
 
