--- a/about.html
+++ b/about.html
@@ -23,15 +23,15 @@
 
 var Damian_Rossney = (function() {
 
-  var story = "Although trained in business and math in college, my early     "+
-              "path lead me to the legal field, where I worked as a paralegal."+
-              "I found the legal process interesting, and medical malpractice "+
-              "in particular to be fascinating, but ultimately felt it to be  "+
-              "unrewarding.  In search of greater fulfillment, I was drawn to "+
-              "a field that has always brought me joy and creative release in "+
-              "my personal life:  programming.  I am fascinated by the reach  "+
-              "and scalability of the web and thrilled by the ability of      "+
-              "software to solve complex problems and build practical things. ";
+  var story = "I am a full stack developer with prior training in business,   "+
+              "math, and the legal field. I am an entrepreneur and            "+
+              "technologist at heart. I enjoy solving complex problems,       "+
+              "building practical things, and developing new businesses. I    "+
+              "have developed apps using Ruby, Rails, Sinatra, JavaScript,    "+
+              "SQL, HTML5, and CSS3. I have utilized Test-Driven Development  "+
+              "and follow Agile methodologies. I continuously work to expand  "+
+              "my skill set, and am currently exploring allied web            "+
+              "technologies, including PHP and Python.";
 
   var skills = {
 
