--- a/index.html
+++ b/index.html
@@ -155,102 +155,104 @@
 		<!--//banner-->
 
 		<!--projects-->
-		<div id="projects" class="container wrapper">
-			<div class="inner_content">
-				<div class="welcome_index">
-					<span>Projects</span>
+		<div id="projects" class="container-fluid">
+			<div class="container wrapper">
+				<div class="inner_content">
+					<div class="welcome_index">
+						<span class="white">Projects</span>
+					</div>
+					<!--info boxes-->
+					<div class="row is-table-row">
+						<div class="col-sm-6 col-md-4">
+							<div class="tile">
+								<div class="intro-icon-disc cont-large"><i class="fa fa-calendar-o fa-flip-vertical intro-icon-large"></i></div>
+								<h6>
+									<span>There's A Board<br/><a class="btn btn-primary" href="http://theresaboard.com">live</a> <a class="btn btn-primary" href="https://github.com/theresaboard">code</a></span>
+								</h6>
+								<p>
+									An open source mentorship app initially designed around the simple idea of matching students with student-tutors based on availability and study topic, There's A Board evolved into a powerful support platform allowing students, alumns, and employee-mentors to connect for studying, tutoring, and skill development. There's A Board was forked by Dev Bootcamp NYC to be used as their tool for managing both paid and volunteer mentors.
+								</p>
+							</div>
+							<div class="pad25"></div>
+						</div>
+
+						<div class="col-sm-6 col-md-4">
+							<div class="tile">
+								<div class="intro-icon-disc cont-large"><i class="fa fa-tasks intro-icon-large"></i></div>
+								<h6>
+									<span>Turtle Overflow<br/><a class="btn btn-primary" href="https://turtle-overflow.herokuapp.com/">live</a> <a class="btn btn-primary" href="https://github.com/dcr8898/turtle-overflow">code</a></span>
+								</h6>
+								<p>
+									A clone of the popular Stack Overflow site. Turtle-overflow was built as an exercise to explore Ruby on Rails, ActiveRecord, and Agile development practices.
+								</p>
+							</div>
+							<div class="pad25"></div>
+						</div>
+
+						<div class="col-sm-6 col-md-4">
+							<div class="tile">
+								<div class="intro-icon-disc cont-large"><i class="fa fa-pie-chart intro-icon-large"></i></div>
+								<h6>
+									<span>Survey Gorilla<br/><a class="btn btn-primary" href="https://survey-gorilla.herokuapp.com/">live</a> <a class="btn btn-primary" href="https://github.com/dcr8898/survey-gorilla">code</a></span>
+								</h6>
+								<p>
+									An end-to-end survey creation and poll-taking app, complete with statistical analysis and visual charts of survey results. Survey Gorilla was built primarily with Sinatra, jQuery, ActiveRecord, and Highcharts using agile development practices.
+								</p>
+							</div>
+							<div class="pad25"></div>
+						</div>
+					</div>
+
+					<div class="row is-table-row">
+						<div class="col-sm-6 col-md-4">
+							<div class="tile">
+								<div class="intro-icon-disc cont-large"><i class="fa fa-bullhorn intro-icon-large"></i></div>
+								<h6>
+									<span>clíque<br/><a class="btn btn-primary" href="https://myclique.herokuapp.com/">live</a> <a class="btn btn-primary" href="https://github.com/dcr8898/clique">code</a></span>
+								</h6>
+								<p>
+									My implementation of the venerable Rails Tutorial by Michael Hartl. Clíque is a real, industrial-strength application built on Ruby on Rails, exploring all of the framework's features, with full unit testing.
+								</p>
+							</div>
+							<div class="pad25"></div>
+						</div>
+
+						<div class="col-sm-6 col-md-4">
+							<div class="tile">
+								<div class="intro-icon-disc cont-large"><i class="fa fa-arrow-circle-right intro-icon-large"></i></div>
+								<h6>
+									<span>Flash Forward<br/><a class="btn btn-primary" href="https://github.com/dcr8898/Flash-Forward">code</a></span>
+								</h6>
+								<p>
+									A web-based flash card application that allows users to either choose an existing deck or create their own interactively.  Flash-forward also allows users to return to incomplete games and provides statistical results for all games played.  Flash-forward was built with Sinatra, ActiveRecord, and PostgreSQL, using agile development practices.
+								</p>
+							</div>
+							<div class="pad25"></div>
+						</div>
+
+						<div class="col-sm-6 col-md-4">
+							<div class="tile">
+								<div class="intro-icon-disc cont-large"><i class="fa fa-th intro-icon-large"></i></div>
+								<h6>
+									<span>2048<br/><a class="btn btn-primary" href="http://rossney.net/2048">live</a> <a class="btn btn-primary" href="https://github.com/dcr8898/dcr2048">code</a></span>
+								</h6>
+								<p>
+									A clone of the fabulous 2048 game created by Gabriele Cirulli.  dcr2048 is an exercise in writing JavaScript using the MVC pattern.  I intend to further improve the game with some cool CSS transforms.  Stay tuned . . .
+								</p>
+							</div>
+							<div class="pad25"></div>
+						</div>
+
+					</div>
+
 				</div>
-				<!--info boxes-->
-				<div class="row is-table-row">
-					<div class="col-sm-6 col-md-4">
-						<div class="tile">
-							<div class="intro-icon-disc cont-large"><i class="fa fa-calendar-o fa-flip-vertical intro-icon-large"></i></div>
-							<h6>
-								<span>There's A Board<br/><a class="btn btn-primary" href="http://theresaboard.com">live</a> <a class="btn btn-primary" href="https://github.com/theresaboard">code</a></span>
-							</h6>
-							<p>
-								An open source mentorship app initially designed around the simple idea of matching students with student-tutors based on availability and study topic, There's A Board evolved into a powerful support platform allowing students, alumns, and employee-mentors to connect for studying, tutoring, and skill development. There's A Board was forked by Dev Bootcamp NYC to be used as their tool for managing both paid and volunteer mentors.
-							</p>
-						</div>
-						<div class="pad25"></div>
-					</div>
-
-					<div class="col-sm-6 col-md-4">
-						<div class="tile">
-							<div class="intro-icon-disc cont-large"><i class="fa fa-tasks intro-icon-large"></i></div>
-							<h6>
-								<span>Turtle Overflow<br/><a class="btn btn-primary" href="https://turtle-overflow.herokuapp.com/">live</a> <a class="btn btn-primary" href="https://github.com/dcr8898/turtle-overflow">code</a></span>
-							</h6>
-							<p>
-								A clone of the popular Stack Overflow site. Turtle-overflow was built as an exercise to explore Ruby on Rails, ActiveRecord, and Agile development practices.
-							</p>
-						</div>
-						<div class="pad25"></div>
-					</div>
-
-					<div class="col-sm-6 col-md-4">
-						<div class="tile">
-							<div class="intro-icon-disc cont-large"><i class="fa fa-pie-chart intro-icon-large"></i></div>
-							<h6>
-								<span>Survey Gorilla<br/><a class="btn btn-primary" href="https://survey-gorilla.herokuapp.com/">live</a> <a class="btn btn-primary" href="https://github.com/dcr8898/survey-gorilla">code</a></span>
-							</h6>
-							<p>
-								An end-to-end survey creation and poll-taking app, complete with statistical analysis and visual charts of survey results. Survey Gorilla was built primarily with Sinatra, jQuery, ActiveRecord, and Highcharts using agile development practices.
-							</p>
-						</div>
-						<div class="pad25"></div>
-					</div>
-				</div>
-
-				<div class="row is-table-row">
-					<div class="col-sm-6 col-md-4">
-						<div class="tile">
-							<div class="intro-icon-disc cont-large"><i class="fa fa-bullhorn intro-icon-large"></i></div>
-							<h6>
-								<span>clíque<br/><a class="btn btn-primary" href="https://myclique.herokuapp.com/">live</a> <a class="btn btn-primary" href="https://github.com/dcr8898/clique">code</a></span>
-							</h6>
-							<p>
-								My implementation of the venerable Rails Tutorial by Michael Hartl. Clíque is a real, industrial-strength application built on Ruby on Rails, exploring all of the framework's features, with full unit testing.
-							</p>
-						</div>
-						<div class="pad25"></div>
-					</div>
-
-					<div class="col-sm-6 col-md-4">
-						<div class="tile">
-							<div class="intro-icon-disc cont-large"><i class="fa fa-arrow-circle-right intro-icon-large"></i></div>
-							<h6>
-								<span>Flash Forward<br/><a class="btn btn-primary" href="https://github.com/dcr8898/Flash-Forward">code</a></span>
-							</h6>
-							<p>
-								A web-based flash card application that allows users to either choose an existing deck or create their own interactively.  Flash-forward also allows users to return to incomplete games and provides statistical results for all games played.  Flash-forward was built with Sinatra, ActiveRecord, and PostgreSQL, using agile development practices.
-							</p>
-						</div>
-						<div class="pad25"></div>
-					</div>
-
-					<div class="col-sm-6 col-md-4">
-						<div class="tile">
-							<div class="intro-icon-disc cont-large"><i class="fa fa-th intro-icon-large"></i></div>
-							<h6>
-								<span>2048<br/><a class="btn btn-primary" href="http://rossney.net/2048">live</a> <a class="btn btn-primary" href="https://github.com/dcr8898/dcr2048">code</a></span>
-							</h6>
-							<p>
-								A clone of the fabulous 2048 game created by Gabriele Cirulli.  dcr2048 is an exercise in writing JavaScript using the MVC pattern.  I intend to further improve the game with some cool CSS transforms.  Stay tuned . . .
-							</p>
-						</div>
-						<div class="pad25"></div>
-					</div>
-
-				</div>
-
 			</div>
 		</div>
 		<!--//projects-->
 
 		<!--about-me-->
-		<div class="container-fluid strip">
-			<div id="about-me" class="container">
+		<div id="about-me" class="container-fluid">
+			<div class="container">
 				<div class="inner_content">
 					<div class="welcome_index">
 						<span>About Me</span>
@@ -299,6 +301,7 @@ var Damian_Rossney = (function() {
 }) ();</code>
 	 				</pre>
 	 				<p class="center">For a print version of my current resume, please clink the pdf link in the Contact section below.</p>
+	 				<div class="pad25"></div>
 				</div>
 			</div>
 		</div>
